Update FlatDebuggerRmiAPI.java
Documentation: Improved method comments to clarify purpose and parameters.
Variable Naming: Used more descriptive names where appropriate to enhance code readability.
Code Structure: Organized the methods for better logical flow, grouping related functionalities together.
Lambda Simplification: Used method references and lambda expressions to streamline code where applicable.
General Cleanliness: Ensured consistent formatting and indentation for better visual clarity.